--- a/test.html
+++ b/test.html
@@ -1,128 +1,240 @@
-<script>
-  function app() {
-    return {
-      query: '',
-      selectedBrand: '',
-      results: [],
-      loading: false,
-      cache: {},
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pricelist VDM - MOTOLAND</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <link rel="icon" href="data:,">
+  <style>
+    input::placeholder, select { color: #9ca3af; }
+  </style>
+</head>
+<body class="bg-gray-100 min-h-screen flex flex-col">
 
-      discounts: { SUZUKI:25, HONDA:35, YAMAHA:33, KAWASAKI:25, KTM:10, HUSQVARNA:10, PIAGGIO:25, DUCATI:5, DEFAULT:30 },
-      urgentDiscount: { HONDA:20, YAMAHA:20, KAWASAKI:20, KTM:10, HUSQVARNA:10, PIAGGIO:25, DUCATI:5, DEFAULT:15 },
+  <div class="fixed top-4 left-4 z-50">
+    <a href="../credit/" class="flex items-center gap-2 bg-white hover:bg-gray-100 text-gray-700 font-medium px-4 py-3 rounded-xl shadow-lg border">
+      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+      </svg>
+      Înapoi
+    </a>
+  </div>
 
-      get brandName() {
-        const names = { suzuki:'Suzuki', honda:'Honda', yamaha:'Yamaha', kawasaki:'Kawasaki', china:'China/Diverse', '':'toate fișierele' };
-        return names[this.selectedBrand] || 'fișierele';
-      },
+  <header class="bg-white shadow-sm py-6 text-center">
+    <img src="logos/logo.svg" alt="MOTOLAND" class="h-12 mx-auto">
+  </header>
 
-      async search() {
-        if (!this.query.trim()) {
-          this.results = [];
-          this.loading = false;
-          return;
-        }
+  <main class="flex-1 max-w-4xl mx-auto w-full px-6 py-10">
+    <div x-data="app()" class="bg-white rounded-2xl shadow-xl p-8">
 
-        this.loading = true;
-        const q = this.query.trim().toUpperCase();
+      <h1 class="text-4xl font-bold text-center text-gray-800 mb-3">Pricelist VDM</h1>
+      <p class="text-center text-gray-600 mb-8">Alege brandul și introdu codul piesei</p>
 
-        // === LISTA COMPLETĂ DE FIȘIERE ===
-        const allFiles = [
-          'data/suzuki.json',
-          'data/honda1.json',
-          'data/honda2.json',
-          'data/yamaha.json',
-          'data/kawasaki.json',
-          'data/china1.json',
-          'data/china2.json',
-          'data/china3.json',
-          'data/diverse.json'
-        ];
+      <div class="flex flex-col sm:flex-row gap-4 mb-8">
+        <select x-model="selectedBrand" @change="query=''; results=[]; search()"
+                class="w-full sm:w-64 px-5 py-4 text-lg border-2 border-gray-300 rounded-xl focus:border-blue-500 focus:outline-none">
+          <option value="">Toate brandurile</option>
+          <option value="suzuki">Suzuki</option>
+          <option value="honda">Honda</option>
+          <option value="yamaha">Yamaha</option>
+          <option value="kawasaki">Kawasaki</option>
+          <option value="china">China / Diverse</option>
+        </select>
 
-        let filesToSearch = [];
+        <input type="text" x-model="query" @input.debounce.300ms="search()"
+               placeholder="Ex: 16705NL5800, 4510028K62BGP..."
+               class="flex-1 px-6 py-4 text-xl border-2 border-gray-300 rounded-xl focus:border-blue-500 focus:outline-none"
+               autofocus>
+      </div>
 
-        if (!this.selectedBrand || this.selectedBrand === '') {
-          // TOATE brandurile → toate cele 9 fișiere
-          filesToSearch = allFiles;
-        } else {
-          const map = {
-            suzuki:   ['data/suzuki.json'],
-            honda:    ['data/honda1.json', 'data/honda2.json'],
-            yamaha:   ['data/yamaha.json'],
-            kawasaki: ['data/kawasaki.json'],
-            china:    ['data/china1.json', 'data/china2.json', 'data/china3.json', 'data/diverse.json']
+      <!-- STATUS CĂUTARE -->
+      <div x-show="loading" class="text-center text-gray-500 text-sm mb-6">
+        Se caută în <strong x-text="brandName"></strong>...
+      </div>
+
+      <!-- REZULTATE -->
+      <template x-if="results.length > 0">
+        <div class="space-y-5">
+          <template x-for="item in results" :key="item.id">
+            <div class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:bg-gray-100 transition-shadow">
+              <div class="flex flex-col md:flex-row justify-between items-start gap-4">
+                <div class="flex-1">
+                  <h3 class="text-xl font-bold text-gray-800" x-text="item.DENUMIRE"></h3>
+                  <div class="mt-2 text-sm text-gray-600">
+                    <span class="font-semibold text-blue-600" x-text="item.brand"></span>
+                    <span class="ml-4 font-mono" x-text="item.code"></span>
+                    <span x-show="item.codnou" class="text-orange-600 font-medium ml-3">
+                      → Înlocuit cu: <span class="font-mono" x-text="item.codnou"></span>
+                    </span>
+                  </div>
+                </div>
+                <div class="text-right">
+                  <div x-show="item.isSuzuki" class="text-3xl font-bold text-gray-900">
+                    <span x-text="format(item.pret)"></span> LEI
+                  </div>
+                  <div x-show="!item.isSuzuki">
+                    <div class="text-2xl font-bold text-green-600">
+                      Stoc: <span x-text="format(item.pret_stoc)"></span> LEI
+                    </div>
+                    <div class="text-xl font-bold text-red-600 mt-2">
+                      Urgent: <span x-text="format(item.pret_urgent)"></span> LEI
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </template>
+        </div>
+      </template>
+
+      <!-- COD NEGĂSIT -->
+      <div x-show="!loading && query && results.length === 0" class="text-center py-24 text-red-600 text-2xl font-bold">
+        Cod negăsit
+      </div>
+
+      <!-- MESAJ INIȚIAL -->
+      <div x-show="!query && !loading" class="text-center py-24 text-gray-400 text-lg">
+        Alege un brand și introdu codul pentru a începe căutarea
+      </div>
+
+    </div>
+  </main>
+
+  <script>
+    function app() {
+      return {
+        query: '',
+        selectedBrand: '',
+        results: [],
+        loading: false,
+        cache: {},
+
+        // Reduceri (modifică doar dacă schimbi politica de preț)
+        discounts: { SUZUKI:25, HONDA:35, YAMAHA:33, KAWASAKI:25, KTM:10, HUSQVARNA:10, PIAGGIO:25, DUCATI:5, DEFAULT:30 },
+        urgentDiscount: { HONDA:20, YAMAHA:20, KAWASAKI:20, KTM:10, HUSQVARNA:10, PIAGGIO:25, DUCATI:5, DEFAULT:15 },
+
+        get brandName() {
+          const names = {
+            suzuki: 'Suzuki',
+            honda: 'Honda',
+            yamaha: 'Yamaha',
+            kawasaki: 'Kawasaki',
+            china: 'China / Diverse',
+            '': 'toate fișierele'
           };
-          filesToSearch = map[this.selectedBrand] || allFiles;
-        }
+          return names[this.selectedBrand] || 'fișierele';
+        },
 
-        const items = [];
+        async search() {
+          if (!this.query.trim()) {
+            this.results = [];
+            this.loading = false;
+            return;
+          }
 
-        for (const file of filesToSearch) {
-          // Încarcă doar dacă nu e deja în cache
-          if (!this.cache[file]) {
-            try {
-              const res = await fetch(file + '?t=' + Date.now());
-              if (!res.ok) {
-                console.warn(`404: ${file}`);
+          this.loading = true;
+          const q = this.query.trim().toUpperCase();
+
+          // === TOATE FIȘIERELE POSIBILE ===
+          const allFiles = [
+            'data/suzuki.json',
+            'data/honda1.json',
+            'data/honda2.json',
+            'data/yamaha.json',
+            'data/kawasaki.json',
+            'data/china1.json',
+            'data/china2.json',
+            'data/china3.json',
+            'data/diverse.json'
+          ];
+
+          let filesToSearch = [];
+
+          if (!this.selectedBrand) {
+            filesToSearch = allFiles;
+          } else {
+            const map = {
+              suzuki:   ['data/suzuki.json'],
+              honda:    ['data/honda1.json', 'data/honda2.json'],
+              yamaha:   ['data/yamaha.json'],
+              kawasaki: ['data/kawasaki.json'],
+              china:    ['data/china1.json', 'data/china2.json', 'data/china3.json', 'data/diverse.json']
+            };
+            filesToSearch = map[this.selectedBrand] || allFiles;
+          }
+
+          const items = [];
+
+          for (const file of filesToSearch) {
+            if (!this.cache[file]) {
+              try {
+                const res = await fetch(file + '?t=' + Date.now());
+                if (!res.ok) {
+                  console.warn(`404 sau eroare: ${file}`);
+                  continue;
+                }
+                let data = await res.json();
+                if (!Array.isArray(data)) data = Object.values(data);
+                this.cache[file] = data;
+                console.log(`Încărcat ${data.length} produse din ${file}`);
+              } catch (e) {
+                console.warn(`Eroare la încărcarea ${file}:`, e);
                 continue;
               }
-              let data = await res.json();
-              if (!Array.isArray(data)) data = Object.values(data);
-              this.cache[file] = data;
-              console.log(`Încărcat: ${file} (${data.length} produse)`);
-            } catch (e) {
-              console.warn(`Eroare la ${file}:`, e);
-              continue;
+            }
+
+            const data = this.cache[file];
+
+            for (const raw of data) {
+              if (!raw.COD || !raw.PRE) continue;
+
+              const cod    = String(raw.COD).trim();
+              const codnou = raw.CODNOU ? String(raw.CODNOU).trim() : '';
+
+              if (!cod.toUpperCase().includes(q) && (!codnou || !codnou.toUpperCase().includes(q))) continue;
+
+              let brand = (String(raw.BRAND || '').trim().toUpperCase().replace(/^\d+-/, ''));
+              if (brand.includes('HOND'))  brand = 'HONDA';
+              if (brand.includes('SUZU'))  brand = 'SUZUKI';
+              if (brand.includes('YAMAH')) brand = 'YAMAHA';
+              if (brand.includes('KAWAS')) brand = 'KAWASAKI';
+
+              const preEur = parseFloat(raw.PRE);
+              if (isNaN(preEur) || preEur <= 0) continue;
+
+              const base = Math.round(preEur * 1.35 * 1.40 * 20); // 37.8
+
+              const discStoc = this.discounts[brand] ?? this.discounts.DEFAULT;
+              const discUrg  = this.urgentDiscount[brand] ?? this.urgentDiscount.DEFAULT;
+
+              const pretStoc   = Math.round(base * (1 - discStoc / 100));
+              const pretUrgent = brand === 'SUZUKI' ? null : Math.round(base * (1 - discUrg / 100));
+
+              items.push({
+                id: cod + '_' + Date.now() + Math.random(),
+                DENUMIRE: String(raw.DENUMIRE || '').trim(),
+                brand: brand,
+                code: codnou || cod,
+                codnou: codnou || null,
+                isSuzuki: brand === 'SUZUKI',
+                pret: pretStoc,
+                pret_stoc: pretStoc,
+                pret_urgent: pretUrgent
+              });
             }
           }
 
-          const data = this.cache[file];
+          this.results = items.slice(0, 100);
+          this.loading = false;
+        },
 
-          for (const raw of data) {
-            if (!raw.COD || !raw.PRE) continue;
-
-            const cod    = String(raw.COD).trim();
-            const codnou = raw.CODNOU ? String(raw.CODNOU).trim() : '';
-
-            if (!cod.toUpperCase().includes(q) && (!codnou || !codnou.toUpperCase().includes(q))) continue;
-
-            let brand = (String(raw.BRAND || '').trim().toUpperCase().replace(/^\d+-/, ''));
-            if (brand.includes('HOND'))  brand = 'HONDA';
-            if (brand.includes('SUZU'))  brand = 'SUZUKI';
-            if (brand.includes('YAMAH')) brand = 'YAMAHA';
-            if (brand.includes('KAWAS')) brand = 'KAWASAKI';
-
-            const preEur = parseFloat(raw.PRE);
-            if (isNaN(preEur) || preEur <= 0) continue;
-
-            const base = Math.round(preEur * 1.35 * 1.40 * 20);
-
-            const discStoc = this.discounts[brand] ?? this.discounts.DEFAULT;
-            const discUrg  = this.urgentDiscount[brand] ?? this.urgentDiscount.DEFAULT;
-
-            const pretStoc   = Math.round(base * (1 - discStoc / 100));
-            const pretUrgent = brand === 'SUZUKI' ? null : Math.round(base * (1 - discUrg / 100));
-
-            items.push({
-              id: cod + '_' + Date.now() + Math.random(),
-              DENUMIRE: String(raw.DENUMIRE || '').trim(),
-              brand: brand,
-              code: codnou || cod,
-              codnou: codnou || null,
-              isSuzuki: brand === 'SUZUKI',
-              pret: pretStoc,
-              pret_stoc: pretStoc,
-              pret_urgent: pretUrgent
-            });
-          }
+        format(x) {
+          return x ? x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.') : '—';
         }
-
-        this.results = items.slice(0, 100);
-        this.loading = false;
-      },
-
-      format(x) {
-        return x ? x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.') : '—';
       }
     }
-  }
-</script>
+  </script>
+</body>
+</html>
